--- a/_posts/2019-08-16-gibbs.md
+++ b/_posts/2019-08-16-gibbs.md
@@ -1,6 +1,6 @@
 ---
 title: Gibbs Phenomenon
-tags: tikz
+tags: tikz basic
 ---
 
 I drew the Gibbs Phenomenon in [CS 371](https://notes.sibeliusp.com/cs/371). Check the notes [here](https://notes.sibeliusp.com/pdfs/1195/cs371.pdf#page=60) in page 60.
