--- a/_posts/2021-10-11-misc.md
+++ b/_posts/2021-10-11-misc.md
@@ -5,6 +5,7 @@ tags: basic
 Below are a set of useful quick links.
 # General
 - [latex color](http://latexcolor.com/)
+- [中国色](http://zhongguose.com/)
 - [watermark](https://tex.stackexchange.com/questions/118939/add-watermark-that-overlays-the-images)
 - [wrap figure](https://tex.stackexchange.com/questions/47674/wrapfig-positioning-footer-is-overlapping-figure)
 - [fancyhdr & extramarks](http://tug.ctan.org/tex-archive/macros/latex/contrib/fancyhdr/fancyhdr.pdf)
@@ -13,12 +14,14 @@ Below are a set of useful quick links.
 - [Problem with `\printindex`. No index created](https://tex.stackexchange.com/questions/275752/problem-with-printindex-no-index-created)
 - [IPython Notebook input and output cells with listings](https://tex.stackexchange.com/questions/340700/ipython-notebook-input-and-output-cells-with-listings)
 - [array: set width for certain columns](https://tex.stackexchange.com/a/340000): w column type in array.
+
 # Drawing
 - [tikz tutorial](https://www3.nd.edu/~kogge/courses/cse30151-fa17/Public/other/tikz_tutorial.pdf)
 - [tikz & pgf examples](https://texample.net/tikz/examples/all/)
 - [inkscape](https://inkscape.org/doc/tutorials/basic/tutorial-basic.html): good for svg drawing
 - [zhihu answer: pic on sci paper](https://www.zhihu.com/question/27474094/answer/1746489710)
 - [title page drawings!](https://muug.ca/mirror/ctan/info/latex-samples/TitlePages/titlepages.pdf): I am using page 23.
+- [biorender](https://biorender.com/)
 
 # Font
 - [eulervm](http://ftp.riken.jp/tex-archive/fonts/eulervm/doc/latex/eulervm/eulervm.pdf)
