--- a/_posts/2021-10-11-misc2.md
+++ b/_posts/2021-10-11-misc2.md
@@ -33,7 +33,7 @@ yields
 
 Moreover, placing `baseline=(X.base)` option in tikzpicture will align tikzpicture according to the text. See [this answer](https://tex.stackexchange.com/a/58284) for more details.
 
-# algorithm2e: comment after `if`
+# algorithm2e: comment after if
 src: <https://tex.stackexchange.com/a/460920>
 
 ```latex
@@ -44,3 +44,16 @@ src: <https://tex.stackexchange.com/a/460920>
 ```
 ![](https://i.stack.imgur.com/RWHMA.png)
 
+# Indexing math symbols
+src: <https://tex.stackexchange.com/a/68243>
+
+`\index{k@$k$}` and `\index{c@$\mathcal{C}$}`. `\index{a sterisk@$\ast$}`
+including a space after the a to make sure it sorts at the beginning.
+
+[TEXnical Tips for Producing a “Clean” Index](https://www.ams.org/arc/tex/howto/index/0index-notes.pdf)
+
+# Remove spaces above and below tikz figure
+
+src: <https://tex.stackexchange.com/questions/163379/how-to-remove-white-space-above-and-below-tikz-figure>
+
+# Fractional data in pgfplots
