--- a/_posts/2021-10-11-misc2.md
+++ b/_posts/2021-10-11-misc2.md
@@ -57,3 +57,7 @@ including a space after the a to make sure it sorts at the beginning.
 src: <https://tex.stackexchange.com/questions/163379/how-to-remove-white-space-above-and-below-tikz-figure>
 
 # Fractional data in pgfplots
+src: <https://tex.stackexchange.com/questions/355243/how-to-plot-fractional-data-with-pgfplots>
+
+Use `y expr` for the data value.
+
